# SlowAndSweet

./: .mcp.json  README.md  resources.md
consciousness/: README.md  cost.md  ease_of_use.md  ethics.md  evolution.md  extensibility.md  feedback_loops.md  observability.md  performance.md  quality.md  reliability.md  scalability.md  security_privacy.md  technical_debt.md  testing.md
plugin/: .mcp.json  CLAUDE.md  README.md  install.sh
prism/: README.md  __init__.py  classifier.py  cli.py  dag.py  decomposer.py  executor.py  policies.yaml  policy.py  requirements.txt
scripts/: com.slowandsweet.router-train.plist.template  install-launchd.sh  install-scheduler.sh  install-systemd.sh  slowandsweet-router-train.service.template  slowandsweet-router-train.timer.template  uninstall-launchd.sh  uninstall-scheduler.sh  uninstall-systemd.sh
slm-bench/: resources_bench.py  resources_bench_results.json  slm_bench.py  slm_bench_results.json
slm-deploy/: node.yaml  parallel-inference-plan.md  slms.yaml  validate.py
slm-experiments/: README.md  __init__.py  autoroute_sxs_live.py  autoroute_validate.py  experiments.py  metrics.py  report.py  requirements.txt  reviewer.py  runner.py
slm-queue/: README.md  autoscaler.py  client.py  mcp_server.py  planner.py  requirements.txt  router.py  server.py  ui.py
slm-router/: .gitignore  DESIGN.md  README.md  bootstrap.py  config.yaml  dashboard.py  explore.py  (+11 more)
slowandsweet/: README.md  pyproject.toml
slowandsweet/slowandsweet/: __init__.py  __main__.py  cli.py  disable.py  doctor.py  init.py  paths.py  state.py  stats.py  token.py
(+44 files in other folders)
